# cr-sqlite

./: Cargo.toml
.github/workflows/: c-tests.yaml  c-valgrind.yaml  publish.yaml  py-tests.yaml  rs-tests.yml  rs-valgrind.yml
core/rs/bundle/: Cargo.toml  Cargo.toml.integration-test
core/rs/bundle/src/: lib.rs
core/rs/bundle_static/: Cargo.toml
core/rs/core/: Cargo.toml  build.rs
core/rs/core/c/: build.rs  changes-vtab.c
core/rs/core/src/: alter.rs  automigrate.rs  backfill.rs  bootstrap.rs  c.rs  changes_vtab.rs  changes_vtab_read.rs  changes_vtab_write.rs  commit.rs  compare_values.rs  config.rs  consts.rs  create_cl_set_vtab.rs  db_version.rs  debug.rs  ext_data.rs  is_crr.rs  lib.rs  pack_columns.rs  sha.rs  site_version.rs  stmt_cache.rs  tableinfo.rs  triggers.rs  unpack_columns_vtab.rs  util.rs
core/rs/core/src/local_writes/: after_delete.rs  after_insert.rs  after_update.rs  mod.rs
core/rs/fractindex-core/: Cargo.toml
core/rs/fractindex-core/src/: fractindex.rs  lib.rs
core/rs/integration_check/src/: lib.rs
core/rs/integration_check/src/t/: tableinfo.rs  test_db_version.rs
core/rs/sqlite-rs-embedded/sqlite3_allocator/: Cargo.toml
core/rs/sqlite-rs-embedded/sqlite_nostd/: Cargo.toml
core/rs/sqlite-rs-embedded/sqlite_nostd/src/: capi.rs  lib.rs  nostd.rs
core/rs/sqlite-rs-embedded/sqlite_web/src/: web.rs
core/src/: Cargo.toml  build.rs  changes-vtab.c  crsqlite.c  crsqlite.test.c  ext-data.c  ext-data.h  ext-data.test.c  lib.rs
py/correctness/src/crsql_correctness/: __init__.py
py/correctness/tests/: test_cl_merging.py  test_cl_triggers.py  test_dbversion.py  test_siteversion.py  test_sync.py  test_sync_prop.py  test_update_rows.py
tools/: Cargo.toml
tools/src/: main.rs
