[workspace]
resolver = "2"
members = [
  "tools",
  "core/rs/core",
  "core/rs/bundle",
  "core/rs/fractindex-core",
  "core/rs/sqlite-rs-embedded/sqlite_nostd",
]
default-members = ["core/rs/bundle", "tools"]

[workspace.package]
version = "0.16.4"
edition = "2024"
rust-version = "1.86.0"
license = "MIT"
repository = "https://github.com/fundament-software/cr-sqlite"
documentation = "https://github.com/vlcn-io/cr-sqlite"
readme = "README.md"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

#[build]
#target = "wasm32-unknown-emscripten"

[workspace.dependencies]
cxx = "1.0"
eyre = "0.6"
cc = "1.0"
cxx-build = "1.0"
