[package]
name = "cr-sqlite-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
links = "crsqlite"

[lib]
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
crsql_bundle = { path = "../rs/bundle" }

[dev-dependencies]
eyre.workspace = true

[build-dependencies]
eyre.workspace = true
cc.workspace = true
