[package]
name = "crsql_core"
version = "0.1.0"
edition = "2024"
authors = ["Matt Wonlaw"]
keywords = ["sqlite", "cr-sqlite", "crdt"]
license = "Apache 2"

[lib]
name = "crsql_core"
crate-type = ["rlib"]

[dependencies]
sqlite_nostd = { path = "../sqlite-rs-embedded/sqlite_nostd" }
bytes = { version = "1.5", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
num-derive = "0.4.1"
libc-print = "*"

[dev-dependencies]

[features]
test = []
libsql = []
loadable_extension = ["sqlite_nostd/loadable_extension"]
static = ["sqlite_nostd/static"]
omit_load_extension = ["sqlite_nostd/omit_load_extension"]
