[package]
name = "sqlite_nostd"
version = "0.1.0"
edition = "2021"

[lib]
name = "sqlite_nostd"
crate-type = ["rlib"]

[dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled_bindings"] }
num-traits = { version = "0.2.17", default-features = false }
num-derive = "0.4.1"

[features]
default = []
loadable_extension = ["libsqlite3-sys/loadable_extension"]
static = []
omit_load_extension = []
